k8s/consumer.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-demo-consumer
  namespace: demo
spec:
  ports:
    - name: http
      port: 8081
      targetPort: 8081
  selector:
    app: demo-consumer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-demo-consumer-v1
  namespace: demo
  labels:
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-consumer
      version: v1
  template:
    metadata:
      labels:
        app: demo-consumer
        version: v1
    spec:
      serviceAccountName: serviceaccount-demo-consumer
      containers:
        - name: demo-consumer
          image: 192.168.103.64:8080/demo/demo-consumer:1.0.0-SNAPSHOT
          imagePullPolicy: Always
          args: [ "--spring.config.location=/app/resources/bootstrap.yaml", "--spring.profiles.active=prod" ]
          ports:
            - name: http
              containerPort: 8081
            - name: grpc
              containerPort: 5443
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8081
            initialDelaySeconds: 10
            periodSeconds: 3
            failureThreshold: 2
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8081
            initialDelaySeconds: 10
            periodSeconds: 3
            failureThreshold: 2
          volumeMounts:
            - name: demo-consumer
              mountPath: /app/config
      volumes:
        - name: demo-consumer
          configMap:
            name: demo-consumer
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtualservice-demo-consumer
  namespace: demo
spec:
  hosts:
    - "*"
  gateways:
    - demo-gateway
  http:
    - match:
        - uri:
            prefix: /demo
      route:
        - destination:
            host: "service-demo-consumer.demo.svc.cluster.local"
            port:
              number: 8081
